--- a/src/index.htm
+++ b/src/index.htm
@@ -100,7 +100,7 @@
                             <div id="certificateDetails">
                                 <h3>Certificate details</h3>
                                 <div class="ms-TextField">
-                                    <label for="CertPath" class="ms-Label">Path the CER certificate file used to encrypt credentials</label>
+                                    <label for="CertPath" class="ms-Label">Path to the CER certificate file used to encrypt credentials</label>
                                     <input type="text" name="CertPath" id="CertPath" class="ms-TextField-field" />
                                     <div class="ms-MessageBar ms-MessageBar--error" id="CertPath-Error" style="display: none;">
                                         <div class="ms-MessageBar-content">
@@ -114,7 +114,7 @@
                                     </div>
                                 </div>
                                 <div class="ms-TextField">
-                                    <label for="CertThumbprint" class="ms-Label">Thumbprint of the certificate uesd to decrypt credentials</label>
+                                    <label for="CertThumbprint" class="ms-Label">Thumbprint of the certificate used to decrypt credentials</label>
                                     <input type="text" name="CertThumbprint" id="CertThumbprint" class="ms-TextField-field" />
                                     <div class="ms-MessageBar ms-MessageBar--error" id="CertThumbprint-Error" style="display: none;">
                                         <div class="ms-MessageBar-content">
